--- a/executors/makefile.am
+++ b/executors/makefile.am
@@ -1,5 +1,5 @@
 
-AM_CFLAGS = $(VOICEMAN_CFLAGS) $(AO_CFLAGS) $(VOICEMAN_INCLUDES)
+AM_CFLAGS = $(VOICEMAN_CFLAGS) $(AO_CFLAGS) $(VOICEMAN_INCLUDES) -std=gnu99
 
 bin_PROGRAMS=voiceman-executor
 
